--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <br><br><br><br><br> <h2 style="color: rgb(234, 50, 163);" >PERSONAL TRANSFORMATION</h2>
 </center>
-<p><h4> Transformation is how we change aspects of who we are, what we do and the life we lead. 
+<p style ="color:white";><h4 style ="color:white";> Transformation is how we change aspects of who we are, what we do and the life we lead. 
     It is both the journey – ‘I am transforming’ – and the destination – ‘I am transformed’. 
     Engaging in Personal Transformation is a 
     statement of positive intent. It marks a point at which we say to ourselves:<br>
@@ -78,7 +78,7 @@ Personal Transformation, therefore, is an intentional, conscious commitment to g
         <image src="14.jpg"  width="300" height="300"> </image> </a>
 </button>
 <br>
-<h2 >Healthy and Healthy brain will lead to a happy human </h2>
+<h2 style ="color:white";>Healthy and Healthy brain will lead to a happy human </h2>
 <image src="11.webp" width="300" hieght="300"></image>
 <br><br>
 <hr>
