--- a/physical transformation.html
+++ b/physical transformation.html
@@ -44,7 +44,7 @@
 </center>
 <center>
 <h2 style="color: rgb(234, 50, 163);" > PHYSICAL TRANSFORMATION</h2><br>
-<p> <h3> Many people do not understand the importance of physical fitness and maintaining good health, 
+<p> <h3 style ="color:white";> Many people do not understand the importance of physical fitness and maintaining good health, 
     therefore they ignore physical fitness and activities which then could lead to life threatening conditions 
     such as heart disease, obesity, high blood pressure, and many more. By enduring daily physical activities,
      you are not only improving the state and condition of your body, but your state of mind as well. 
@@ -57,7 +57,7 @@
 <center><p  > <h3 style="color:rgb(84, 122, 6) ;"> Our website helps you in showing up all the possible kinds of diets and excercises. </h3></p><br>
     <image src="4.jpg" width="300" hieght="400" style="float: left ";/>
     <image src="5.jpg" width="300" hieght="400" style="float: right ";/>
-<h3><b>Select the Body part </b><br> This will Redirect you to Required Excercise </h3><br>
+<h3 style ="color:white";><b>Select the Body part </b><br> This will Redirect you to Required Excercise </h3><br>
 <button  class="button button1"> 
     <a style="color:White ;" href ="https://www.youtube.com/watch?v=yL_dE81O_mw ">Belly Fat</a>
 </button>
