--- a/physical transformation.html
+++ b/physical transformation.html
@@ -37,7 +37,7 @@
    </h2>
 </p>
 <center>
-<marquee  style="border:rgb(248, 5, 240) 2px SOLID"  behavior="alternate" >  <h2> CLICK THE BUTTONS BELOW TO REDIRECT TO HOME PAGE </h2></marquee>
+<marquee  style="border:rgb(248, 5, 240) 2px SOLID"  behavior="alternate" >  <h2 style ="color:white";> CLICK THE BUTTONS BELOW TO REDIRECT TO HOME PAGE </h2></marquee>
     
         <a style="color:White ;" href ="Personal Transformation.html"> 
             <img src="InShot_20230127_145310019.jpg"  width="300" height="125">  </a> 
