--- a/mental transformation.html
+++ b/mental transformation.html
@@ -38,7 +38,7 @@
    </h2>
 </p>
 <center>
-  <marquee  style="border:rgb(248, 5, 240) 2px SOLID"  behavior="alternate" >  <h2> CLICK THE BUTTONS BELOW TO REDIRECT TO HOME PAGE </h2></marquee>
+  <marquee  style="border:rgb(248, 5, 240) 2px SOLID"  behavior="alternate" >  <h2 style ="color:white";> CLICK THE BUTTONS BELOW TO REDIRECT TO HOME PAGE </h2></marquee>
     
         <a style="color:White ;" href ="Personal Transformation.html"> 
             <img src="InShot_20230127_145310019.jpg"  width="300" height="125">  </a> 
@@ -50,7 +50,7 @@
 </center>
 <h2 style="color: rgb(82, 4, 250);"> What is mental health?</h2><br>
 <image src="21.jpg" width="100" height="100" style="float: right";/></image>
-<h3>Mental health includes our emotional, psychological, and social well-being. It affects how we think, feel,
+<h3 style ="color:white";>Mental health includes our emotional, psychological, and social well-being. It affects how we think, feel,
      and act. 
     It also helps determine how we handle stress, relate to others, and make healthy choices.1
      Mental health is important at every stage of life, from childhood and adolescence through adulthood.<br>
@@ -63,9 +63,10 @@
    <image src="19.jpg" width="100" height="100" style="float: right";/></image>
    Mental and physical health are equally important components of overall health. <br> For example, depression increases the risk for many types of physical health problems, particularly long-lasting conditions like diabetes, heart disease, and stroke. Similarly, 
    the presence of chronic conditions can increase the risk for mental illness.<br><br>
+ <p style ="color:white";>
    <b><h2 style="color: rgb(82, 4, 250);">Can your mental health change over time?</h2></b>
    <image src="20.jpg" width="100" height="100" style="float: right";/></image>
-   Yes, it’s important to remember that a person’s mental health can change over time,
+  Yes, it’s important to remember that a person’s mental health can change over time,
     depending on many factors.  When the demands placed on a person exceed their resources and coping abilities,
      their mental health could be impacted. <br>For example, if someone is working long hours, caring for a relative, or experiencing economic hardship, they may experience poor mental health.
 <center><br><h2 style="color: rgb(248, 84, 8);"> YOGA-One of the most practiced method for dealing with mental health  </h2></center>
@@ -75,7 +76,7 @@ Each yogic activity is the key to improving flexibility, strength, balance, and 
  It is a perfect gateway to discovering the best yoga resources, general yoga protocol training videos,
   and the latest yoga programs to participate in.<br>
   <h2 style="color: rgb(8, 231, 119);">Benefit of Yoga</h2>
-  <h3><ul>
+  <h3    style ="color:white";><ul>
     <li>People from all over the world perform yoga to relax and keep their 
         bodies fit. People all over the world have started to realize the benefits of yoga.</li>
     <li>Yoga exercises have electrifying impacts on the nervous system through their non-tiring physiological
@@ -100,6 +101,7 @@ Each yogic activity is the key to improving flexibility, strength, balance, and 
          better decision-making skills, and more.
     </li>
 </ul>
+     
 </h3>
  <center><h2 style="color: rgb(234, 50, 163);"> YOGA VIDEOS TO BE FOLLOWED</h2> 
   <h2 style="color: rgb(207, 14, 185);"> click on  desired aspect given below.</h2>  <br>
